--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "ws": "^8.15.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.15.1"
   }
 }
